Updated Few things
Small update to POC and finalized the API
